updated simple lr graph

--- a/MLLab2.ipynb
+++ b/MLLab2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a6e9d389",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0151ede6",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "46245498",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e392ef6f",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "321e7135",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
          "type": "float"
         }
        ],
-       "ref": "1a32c783-7652-4552-a38b-fa85e2232b30",
+       "ref": "453ca4ed-34d0-4234-9b2d-3b074a4ca6c4",
        "rows": [
         [
          "0",
@@ -388,7 +388,7 @@
        "[200 rows x 1 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "54dc0595",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
          "type": "float"
         }
        ],
-       "ref": "5c56c108-781e-4ac6-bec0-a304f8cd02e4",
+       "ref": "d88a2135-618e-4ce0-9bb4-1d67392af0a1",
        "rows": [
         [
          "0",
@@ -641,7 +641,7 @@
        "Name: package, Length: 200, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "71261ea0",
    "metadata": {},
    "outputs": [],
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "8bb2581e",
    "metadata": {},
    "outputs": [],
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "4c275757",
    "metadata": {},
    "outputs": [],
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b4cb8764",
    "metadata": {},
    "outputs": [
@@ -1276,7 +1276,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "d055e712",
    "metadata": {},
    "outputs": [
@@ -1306,7 +1306,7 @@
          "type": "float"
         }
        ],
-       "ref": "221d425b-0799-4d46-9c69-e9e00960d927",
+       "ref": "9ca6e41c-5c12-4768-af97-38484afdc496",
        "rows": [
         [
          "95",
@@ -1705,7 +1705,7 @@
        "76   6.94"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1716,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "390ba1be",
    "metadata": {},
    "outputs": [
@@ -1735,7 +1735,7 @@
          "type": "float"
         }
        ],
-       "ref": "53a27ae2-ec08-4f52-b977-d9768f627749",
+       "ref": "6d9b17ba-3ae6-41a1-9428-1fe17e0d9500",
        "rows": [
         [
          "95",
@@ -1947,7 +1947,7 @@
        "Name: package, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "6743d631",
    "metadata": {},
    "outputs": [
@@ -1976,7 +1976,7 @@
        "array([2.78031348])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1987,17 +1987,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "9fdc40ea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15dfc82d0>]"
+       "[<matplotlib.lines.Line2D at 0x13e301090>]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2022,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "acb040f9",
    "metadata": {},
    "outputs": [],
@@ -2041,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "2ee00c5e",
    "metadata": {},
    "outputs": [
@@ -2063,17 +2063,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "d785650f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15ded5310>]"
+       "[<matplotlib.lines.Line2D at 0x13e3a8190>]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
