compared knn regressor with lr for univariate area v price

--- a/MLLab3.ipynb
+++ b/MLLab3.ipynb
@@ -1664,6 +1664,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a9ced6a9",
+   "metadata": {},
+   "source": [
+    "# Multivariate LR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "df303258",
    "metadata": {},
    "source": [
